@startuml "products"
entity "products" as products {
    * id : uuid [primary key]
    * name : varchar 
    * type : varchar
    * price : float
    * quantity : int
    * created_at : datetime
    * updated_at : datetime
    * deleted_at : datetime
}

entity "product_type" as product_type {
    * code : varchar(10) [primary key]
    * description : varchar(40)
    * label : varchar(40)
}

entity "product_images" as product_images {
    * id_product : uuid
    * primaryImage : varchar(10)
    * image1 : text
    * image2 : text
    * image3 : text
    * created_at : datetime
    * updated_at : datetime
    * deleted_at : datetime
}


product_type::code --> products::type
products::id --> product_images::id_product
@enduml